saas-1550 runtime envs to sdk
