# lib/logic/api/runtimeEnvironments.js
@@ -4,91 +4,6 @@ const RuntimeEnvironments = require('../entities/RuntimeEnvironments');
 
 const _extractFieldsForRuntimeEnvironmentEntity = runtimeEnv => _.pick(runtimeEnv, 'version', 'metadata', 'environmentCertPath', 'runtimeScheduler', 'dockerDaemonScheduler', 'history', 'extends', 'description', 'isPublic', 'isDefault', 'accountId', 'plan', 'accounts', 'nonComplete');
 
-// Account
-const getAllRuntimeEnvironmentsForAccount = async (options) => {
-    const qs = {
-        limit: options.limit,
-        offset: options.offset,
-    };
-
-    const RequestOptions = {
-        url: '/api/runtime-environments',
-        method: 'GET',
-        qs,
-    };
-
-    const result = await sendHttpRequest(RequestOptions);
-    const runtimeEnvironments = [];
-    _.forEach(result, (runtimeEnvironment) => {
-        const data = _extractFieldsForRuntimeEnvironmentEntity(runtimeEnvironment);
-        runtimeEnvironments.push(new RuntimeEnvironments(data));
-    });
-
-    return runtimeEnvironments;
-};
-
-const getRuntimeEvironmentsByNameForAccount = async (option) => {
-    const qs = {
-        version: option.version,
-        extend: option.extend,
-        history: option.history,
-    };
-    const options = {
-        url: `/api/runtime-environments/${encodeURIComponent(option.name)}`,
-        method: 'GET',
-        qs,
-    };
-    const runtimeEnvironments = await sendHttpRequest(options);
-    if (option.diff) {
-        return runtimeEnvironments;
-    } else if (option.history) {
-        const history = [];
-        _.forEach(runtimeEnvironments, (runtimeEnvironment) => {
-            history.push(_extractFieldsForRuntimeEnvironmentEntity(runtimeEnvironment));
-        });
-        return history;
-    }
-    return new RuntimeEnvironments(_extractFieldsForRuntimeEnvironmentEntity(runtimeEnvironments));
-};
-
-const applyByNameForAccount = async (option) => {
-    const { name, extend, body, description } = option;
-    const qs = {
-        extend: extend,
-        description: description,
-    };
-    const options = {
-        url: `/api/runtime-environments/${encodeURIComponent(name)}`,
-        method: 'PUT',
-        qs,
-        body,
-    };
-
-    return sendHttpRequest(options);
-};
-
-const deleteRuntimeEnvironmentByNameForAccount = async (name, force) => {
-    const qs = {
-        force,
-    };
-    const options = {
-        url: `/api/runtime-environments/${encodeURIComponent(name)}`,
-        method: 'DELETE',
-        qs,
-    };
-
-    return sendHttpRequest(options);
-};
-
-const setDefaultForAccount = async (name) => {
-    const options = {
-        url: `/api/runtime-environments/default/${encodeURIComponent(name)}`,
-        method: 'PUT',
-    };
-
-    return sendHttpRequest(options);
-};
-
 // Admin
 
 const getAllRuntimeEnvironmentsForAdmin = async (option) => {
@@ -230,11 +145,6 @@ const getRuntimeEnvironmentType = (runtimeEnvironmentName) => {
 
 
 module.exports = {
-    getAllRuntimeEnvironmentsForAccount,
-    getRuntimeEvironmentsByNameForAccount,
-    applyByNameForAccount,
-    deleteRuntimeEnvironmentByNameForAccount,
-    setDefaultForAccount,
     getAllRuntimeEnvironmentsForAdmin,
     getRuntimeEvironmentsByNameForAdmin,
     applyByNameForAdmin,
