# lib/logic/entities/RuntimeEnvironments.js
@@ -14,8 +14,16 @@ class RuntimeEnvironments extends Entity {
         this.environmentCertPath = _.get(data, 'environmentCertPath');
         this.last_changed_by = _.get(data, 'metadata.changedBy');
         this.extends = _.get(data, 'extends');
-        this.defaultColumns = ['name', 'version','extends', 'last_changed_by'];
+        this.defaultColumns = ['name', 'version', 'extends', 'last_changed_by'];
         this.wideColumns = this.defaultColumns.concat([]);
+    }
+
+    static fromResponse(response) {
+        return new RuntimeEnvironments(_.pick(response, [
+            'version', 'metadata', 'environmentCertPath', 'runtimeScheduler',
+            'dockerDaemonScheduler', 'history', 'extends', 'description', 'isPublic',
+            'isDefault', 'accountId', 'plan', 'accounts', 'nonComplete',
+        ]));
     }
 }
 
